3 ways for applying logs

--- a/src/App.css
+++ b/src/App.css
@@ -16,4 +16,23 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+/* width */
+::-webkit-scrollbar {
+  width: 6px;
+  
+}
 
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
